<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Login">

    <Button
        android:id="@+id/alterar"
        android:layout_width="106dp"
        android:layout_height="54dp"
        android:background="@color/roxo"
        android:onClick="setEntrar"
        android:text="@string/entrar"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoLogin"
        app:layout_constraintVertical_bias="0.493"
        app:toggleCheckedStateOnClick="false"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/logoLogin"
        android:layout_width="413dp"
        android:layout_height="94dp"
        android:background="@color/laranja"
        android:text="@string/imdlogo"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="VisualLintBounds" />

    <EditText
        android:id="@+id/logintexto"
        android:layout_width="216dp"
        android:layout_height="55dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:text="@string/loginescrita"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoLogin"
        app:layout_constraintVertical_bias="0.2"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/senhatexto"
        android:layout_width="217dp"
        android:layout_height="67dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:text="@string/senhaescrita"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoLogin"
        app:layout_constraintVertical_bias="0.363"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoLogin"
        app:layout_constraintVertical_bias="0.14" />

    <TextView
        android:id="@+id/senha"
        android:layout_width="57dp"
        android:layout_height="26dp"
        android:text="@string/Senha"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoLogin"
        app:layout_constraintVertical_bias="0.292" />

    <Button
        android:id="@+id/resetsenha"
        android:layout_width="256dp"
        android:layout_height="61dp"
        android:backgroundTint="@color/white"
        android:onClick="setAlterar"
        android:text="@string/esqueci"
        android:textColor="@color/azul"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoLogin"
        app:layout_constraintVertical_bias="0.601" />
</androidx.constraintlayout.widget.ConstraintLayout>