<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/cadastrar"
        android:layout_width="164dp"
        android:layout_height="79dp"
        android:layout_marginTop="36dp"
        android:background="@color/roxo"
        android:onClick="setCadastrar"
        android:text="@string/Cadastrar"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passaTempo" />

    <Button
        android:id="@+id/passaTempo"
        android:layout_width="286dp"
        android:layout_height="77dp"
        android:background="@color/roxo"
        android:onClick="setAssistir"
        android:text="@string/Videos"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.285" />

    <Button
        android:id="@+id/deletar"
        android:layout_width="164dp"
        android:layout_height="79dp"
        android:background="@color/roxo"
        android:onClick="setDeletar"
        android:text="@string/Deletar"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.886"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listar"
        app:layout_constraintVertical_bias="0.065" />

    <Button
        android:id="@+id/alterar"
        android:layout_width="164dp"
        android:layout_height="79dp"
        android:background="@color/roxo"
        android:onClick="setAtualizar"
        android:text="@string/Alterar"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cadastrar"
        app:layout_constraintVertical_bias="0.065" />

    <Button
        android:id="@+id/listar"
        android:layout_width="164dp"
        android:layout_height="79dp"
        android:layout_marginTop="36dp"
        android:background="@color/roxo"
        android:onClick="setListar"
        android:text="@string/Listar"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.886"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passaTempo" />

    <TextView
        android:id="@+id/pergunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="492dp"
        android:text="@string/Pergunta"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoMenu"
        app:layout_constraintVertical_bias="0.258" />

    <TextView
        android:id="@+id/logoMenu"
        android:layout_width="0dp"
        android:layout_height="93dp"
        android:background="@color/laranja"
        android:text="@string/imdlogo"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="407dp"
        android:layout_height="215dp"
        android:layout_marginTop="440dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoMenu"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

</androidx.constraintlayout.widget.ConstraintLayout>